force-app/main/default/objects/Transaction__c/Transaction__c.object-meta.xml
<CustomObject>
    <description>Transactions for financial products. These represent the movement of money into our out of a financial product.</description>
    <label>Transaction</label>
    <nameField>
        <displayFormat>TXN-{000000}</displayFormat>
        <label>Transaction number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>