force-app/main/default/objects/Transaction__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the transaction. TEST1</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>