force-app/main/default/objects/Transaction__c/fields/ExpectationLinked__c.field-meta.xml
<CustomField>
    <fullName>ExpectationLinked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if an expectation has been linked to this transaction. Needed for complete processign</description>
    <label>Expectation Linked?</label>
    <type>Checkbox</type>
</CustomField>