force-app/main/default/objects/Transaction__c/fields/ExternalTransactionId__c.field-meta.xml
<CustomField>
    <fullName>ExternalTransactionId__c</fullName>
    <description>The ID of the transaction from the system of record.</description>
    <externalId>true</externalId>
    <label>External transaction ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>