force-app/main/default/objects/Transaction__c/fields/Fulfilment__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Links the transaction to a fulfilment record so that we can be sure of the advice that was the origin for this transaction.</description>
    <label>Fulfilment</label>
    <referenceTo>Fulfilment__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>