force-app/main/default/objects/Transaction__c/fields/isVisible__c.field-meta.xml
<CustomField>
    <fullName>isVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the transaction is valid and will be displayed to customers (subject to the type also being visible). If checked, it will be, otherwise it will be hidden. There will be a variety of processes, automated and manual, that control when IsValid is set to true.</description>
    <inlineHelpText>For a transaction type displayed to customers (e.g. a cash deposit but not a fee), if this value is true, the transaction will be visible to the customer.</inlineHelpText>
    <label>Visible in portal</label>
    <type>Checkbox</type>
</CustomField>