force-app/main/default/objects/Transaction__c/fields/PlatformLastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformLastModifiedDateTime__c</fullName>
    <description>Date stamp of record&apos;s last modified date in Nova service</description>
    <label>Platform last modified date time</label>
    <type>DateTime</type>
</CustomField>