force-app/main/default/objects/Transaction__c/fields/ReviewedBy__c.field-meta.xml
<CustomField>
    <fullName>ReviewedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that performed the review of the transaction</description>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>