force-app/main/default/objects/Transaction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of transaction</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>LUMP_SUM</fullName>
                <label>Lump sum</label>
            </value>
            <value>
                <fullName>REBATE</fullName>
                <label>Rebate</label>
            </value>
            <value>
                <fullName>TAX_RELIEF</fullName>
                <label>Tax relief</label>
            </value>
            <value>
                <fullName>TRANSFER</fullName>
                <label>Transfer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>