force-app/main/default/objects/Transaction__c/listViews/Unlinked_Transactions.listView-meta.xml
<ListView>
    <fullName>Unlinked_Transactions</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>FinancialProduct__c</columns>
    <columns>Amount__c</columns>
    <columns>Direction__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExpectationLinked__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unlinked Transactions</label>
</ListView>